@@ -1,10 +1,12 @@
 libcerror is a library for cross-platform C error functions.
 
 Project information:
-* Status: alpha
+
+* Status: beta
 * Licence: LGPLv3+
 
 For more information see:
+
 * Project documentation: https://github.com/libyal/libcerror/wiki/Home
 * How to build from source: https://github.com/libyal/libcerror/wiki/Building
 
