@@ -1,6 +1,6 @@
 [project]
 name: "libcerror"
-status: "alpha"
+status: "beta"
 authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2008"
 download_url: "https://github.com/libyal/libcerror/releases"
